last commit skill design

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
    <head>
       <meta charset="UTF-8">
-      <title>KNIGHTRIDER</title>
+      <title>KNIGHT-RIDER</title>
       <!-- Google font -->
-	  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+	   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
       <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
-      <link rel="stylesheet" href="assets/css/bicon.min.css" />
       <!-- Owl Carousel -->
       <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
       <!-- Magnific Popup -->
@@ -36,6 +36,9 @@
 							<a class="nav-link" href="#about">About</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#skill">Skill</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#service">Service</a>
 						</li>
 						<li class="nav-item">
@@ -59,11 +62,176 @@
 		<section class="home_area" id="home">
 			<div class="overlay"></div>
 				<div class="home_content">
-					<h2 class="mt-4">I love to develop</h2>
-					<h1 class="pt-1 mb-0 pb-2 text-white">I am a DeVeLoPeR</h1>
+					<h2 class="mt-4">I Love to Develop</h2>
+					<h1 class="pt-1 mb-0 pb-2 text-white"><span>I Am</span> <span id="ityped"></span></h1>
 				</div>
 		</section>
 		<!-- End Home -->
+
+		<!--About Section-->
+		<section class="section-padding" id="about">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-5">
+						<div class="about_img">
+							<img src="assets/images/personal_pro.jpg" alt="images" >
+						</div>
+					</div>
+					<div class="col-md-7">
+						<div class="about_content">
+							<h4 class="title about_title title-left">I Am Software Developer</h4>
+							<p>I am <span>Sukanta Purkayastha</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                                took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+							<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+							<div class="social_icons">
+								<a href="#"><i class="fab fa-facebook-f"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a href="#"><i class="fab fa-linkedin"></i></a>
+								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a href="#"><i class="fab fa-github"></i></a>
+							</div>
+                            <span class="buton text-center  hire">
+							  <a href="#" class="front">Hire Me &nbsp; <i class="fas fa-location-arrow"></i></a>
+							</span>
+                            <span class="buton buton-bord text-center download">
+							  <a href="#" class="front">Download C.V &nbsp; <i class="fas fa-download"></i></a>
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--About Section-->
+
+		<!--Skill Section-->
+		<section class="section-padding bg-img" id="skill" style='background-image: url("assets/images/b4.jpg");'>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3">
+						<div class="item mb-md50">
+							<span class="fas fa-pencil-alt icon"></span><br>
+							<h5 class="title title-left">Education</h5>
+							<ul>
+								<li>
+									<h6>University of Engineering</h6>
+									<p>Bachelor of Science</p>
+								</li>
+								<li>
+									<h6>College of Awesomeness</h6>
+									<p>Master of Fine Arts</p>
+								</li>
+								<li>
+									<h6>School of Amusement</h6>
+									<p>Bachelor of Fine Arts</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="item mb-md50">
+							<span class="fas fa-briefcase icon"></span><br>
+							<h5 class="title title-left">Experience</h5>
+							<ul>
+								<li>
+									<h6>University of Engineering</h6>
+									<p>Bachelor of Science</p>
+								</li>
+								<li>
+									<h6>College of Awesomeness</h6>
+									<p>Master of Fine Arts</p>
+								</li>
+								<li>
+									<h6>School of Amusement</h6>
+									<p>Bachelor of Fine Arts</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="item skills">
+							<span class="fas fa-chart-line icon"></span><br>
+							<h5 class="title title-left">My Skills</h5>
+
+							<div class="skill">
+								<h6>Web Design <span>90%</span></h6>
+								<div class="skills-progress"><span data-value="90%" style="width: 90%;"></span></div>
+							</div>
+							<div class="skill">
+								<h6>Development <span>80%</span></h6>
+								<div class="skills-progress"><span data-value="80%" style="width: 80%;"></span></div>
+							</div>
+							<div class="skill">
+								<h6>Branding <span>85%</span></h6>
+								<div class="skills-progress"><span data-value="85%" style="width: 85%;"></span></div>
+							</div>
+							<div class="skill">
+								<h6>Marketing <span>75%</span></h6>
+								<div class="skills-progress"><span data-value="75%" style="width: 75%;"></span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--Skill Section-->
+
+		<!--Services section-->
+		<section class="section-padding" id="service">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<div class="section-head full-width">
+							<h4 class="title about_title title-left service_title">My Services</h4>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-laptop"></span>
+							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--Services section-->
+
 
 
 
@@ -72,6 +240,7 @@
       <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
       <script type="text/javascript" src="assets/js/popper.min.js"></script>
       <script type="text/javascript" src="assets/js/onepagenav.js"></script>
+      <script type="text/javascript" src="assets/js/ityped.min.js"></script>
       <script type="text/javascript" src="assets/js/isotope.js"></script>
       <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
       <script type="text/javascript" src="assets/js/owl.carousel2.thumbs.min.js"></script>
