--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<!--Skill Section-->
 
 		<!--Services section-->
-		<section class="section-padding" id="service">
+		<section class="section-padding services" id="service">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
@@ -187,43 +187,44 @@
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
+							<span class="fas fa-laptop icon"></span>
 							<h6>Web Design</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 active bolt">
+						<div class="item mb-md50">
+							<span class="fas fa-database icon"></span>
+							<h6 class="text-capitalize">Development</h6>
 							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
-							<h6>Web Design</h6>
+							<span class="fas fa-volume-up icon"></span>
+							<h6 class="text-capitalize">branding</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="bord full-width"></div>
+					<div class="col-lg-4 col-md-6">
+						<div class="item mb-md50">
+							<span class="fas fa-code icon"></span>
+							<h6 class="text-capitalize">Clean Coding</h6>
+							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 active">
+						<div class="item mb-md50">
+							<span class="fas fa-mobile icon"></span>
+							<h6 class="text-capitalize">fully responsive</h6>
 							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
-							<h6>Web Design</h6>
-							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
-							<h6>Web Design</h6>
-							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
-							<h6>Web Design</h6>
-							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="item mb-md50">
-							<span class="fas fa-laptop"></span>
-							<h6>Web Design</h6>
+							<span class="fas fa-cogs icon"></span>
+							<h6 class="text-capitalize">custom support</h6>
 							<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam</p>
 						</div>
 					</div>
