Counter Up update

--- a/index.html
+++ b/index.html
@@ -233,6 +233,44 @@
 		</section>
 		<!--Services section-->
 
+		<!-- Start Counter Up -->
+		<section class="counter_area mb-10">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row text-center">
+					<div class="col-xl-3">
+						<div class="single_counter">
+							<i class="fas fa-clock"></i>
+							<h1><span class="counter">2,523</span></h1>
+							<h5>Working Hours</h5>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single_counter">
+							<i class="fas fa-graduation-cap"></i>
+							<h1><span class="counter">7,523</span></h1>
+							<h5>Completed Projects</h5>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single_counter">
+							<i class="fas fa-users"></i>
+							<h1><span class="counter">2,523</span></h1>
+							<h5>No. of Clients</h5>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single_counter">
+							<i class="fas fa-user-tie"></i>
+							<h1><span class="counter">23</span></h1>
+							<h5>Team Member</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Counter Up -->
+
 
 
 
