--- a/index.html
+++ b/index.html
@@ -271,7 +271,29 @@
 		</section>
 		<!-- End Counter Up -->
 
+		<!-- Start Portfolio  -->
+		<section id="portfolio" class="portfolio_area section-padding">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-12 text-center">
+						<div class="section-head full-width">
+							<h4 class="title about_title title-left service_title">My Services</h4>
+						</div>
+					</div>
+				</div>
+				<div class="row justify-content-center">
 
+					<!-- filter links -->
+					<div class="filtering text-center mb-50">
+						<span data-filter="*" class="active">All</span>
+						<span data-filter=".brand" class="">Brand</span>
+						<span data-filter=".web" class="">Design</span>
+						<span data-filter=".graphic" class="">Graphic</span>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Portfolio  -->
 
 
       <!-- LinkUp Js -->
