--- a/index.html
+++ b/index.html
@@ -281,20 +281,59 @@
 						</div>
 					</div>
 				</div>
-				<div class="row justify-content-center">
-
-					<!-- filter links -->
-					<div class="filtering text-center mb-50">
-						<span data-filter="*" class="active">All</span>
-						<span data-filter=".brand" class="">Brand</span>
-						<span data-filter=".web" class="">Design</span>
-						<span data-filter=".graphic" class="">Graphic</span>
+				<div class="portfolio_details">
+					<div class="row justify-content-center">
+						<div class="col-xl-12">
+						<!--  filter links  -->
+							<div class="filtering text-center mb-50">
+								<span data-filter="*" class="active">All</span>
+								<span data-filter=".brand" class="">Brand</span>
+								<span data-filter=".web" class="">Design</span>
+								<span data-filter=".graphic" class="">Graphic</span>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio_active">
+						<div class="row">
+							<div class="col-md-4 grid-item brand web">
+								<div class="single_portfolio">
+									<div class="hover">
+										<img src="assets/images/1.jpg" alt="" />
+										<a href="assets/images/port1.jpg" class="view"><i class="fas fa-plus"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 grid-item brand web">
+								<div class="single_portfolio">
+									<div class="hover">
+										<img src="assets/images/2.jpg" alt="" />
+										<a href="assets/images/port5.jpg" class="view"><i class="fas fa-plus"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 grid-item web graphic">
+								<div class="single_portfolio">
+									<div class="hover">
+										<img src="assets/images/3.jpg" alt="" />
+										<a href="assets/images/port2.jpg" class="view"><i class="fas fa-plus"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 grid-item  web">
+								<div class="single_portfolio">
+									<div class="hover">
+										<img src="assets/images/4.jpg" alt="" />
+										<a href="assets/images/port3.jpg" class="view"><i class="fas fa-plus"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End Portfolio  -->
-
+		<!-- End Portfolio  
+		
 
       <!-- LinkUp Js -->
       <script type="text/javascript" src="assets/js/jquery-1.12.4.min.js"></script>
