--- a/index.html
+++ b/index.html
@@ -273,63 +273,243 @@
 
 		<!-- Start Portfolio  -->
 		<section id="portfolio" class="portfolio_area section-padding">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-12 text-center">
 						<div class="section-head full-width">
-							<h4 class="title about_title title-left service_title">My Services</h4>
+							<h4 class="title about_title title-left service_title">Recent Projects</h4>
 						</div>
 					</div>
 				</div>
-				<div class="portfolio_details">
-					<div class="row justify-content-center">
-						<div class="col-xl-12">
-						<!--  filter links  -->
-							<div class="filtering text-center mb-50">
-								<span data-filter="*" class="active">All</span>
-								<span data-filter=".brand" class="">Brand</span>
-								<span data-filter=".web" class="">Design</span>
-								<span data-filter=".graphic" class="">Graphic</span>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img src="assets/images/portfolio/1.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
-					<div class="portfolio_active">
-						<div class="row">
-							<div class="col-md-4 grid-item brand web">
-								<div class="single_portfolio">
-									<div class="hover">
-										<img src="assets/images/1.jpg" alt="" />
-										<a href="assets/images/port1.jpg" class="view"><i class="fas fa-plus"></i></a>
-									</div>
-								</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img src="assets/images/portfolio/2.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
 							</div>
-							<div class="col-md-4 grid-item brand web">
-								<div class="single_portfolio">
-									<div class="hover">
-										<img src="assets/images/2.jpg" alt="" />
-										<a href="assets/images/port5.jpg" class="view"><i class="fas fa-plus"></i></a>
-									</div>
-								</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/3.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
 							</div>
-							<div class="col-md-4 grid-item web graphic">
-								<div class="single_portfolio">
-									<div class="hover">
-										<img src="assets/images/3.jpg" alt="" />
-										<a href="assets/images/port2.jpg" class="view"><i class="fas fa-plus"></i></a>
-									</div>
-								</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/4.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
 							</div>
-							<div class="col-md-4 grid-item  web">
-								<div class="single_portfolio">
-									<div class="hover">
-										<img src="assets/images/4.jpg" alt="" />
-										<a href="assets/images/port3.jpg" class="view"><i class="fas fa-plus"></i></a>
-									</div>
-								</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/5.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/6.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/7.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/8.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/9.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/10.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/11.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12 col-md-6 col-lg-3 no-padding">
+						<div class="portfolio-content">
+							<figure>
+								<img class="img-fluid" src="assets/images/portfolio/12.jpg" alt="">
+							</figure>
+
+							<div class="entry-content flex flex-column align-items-center justify-content-center">
+								<h3>Flower Skin</h3>
+
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+								<ul class="flex flex-wrap justify-content-center">
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</section>
 		<!-- End Portfolio  
