--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img src="assets/images/portfolio/1.jpg" alt="">
@@ -301,7 +301,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img src="assets/images/portfolio/2.jpg" alt="">
@@ -320,7 +320,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/3.jpg" alt="">
@@ -339,7 +339,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/4.jpg" alt="">
@@ -358,7 +358,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/5.jpg" alt="">
@@ -377,7 +377,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/6.jpg" alt="">
@@ -396,7 +396,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/7.jpg" alt="">
@@ -415,7 +415,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/8.jpg" alt="">
@@ -434,7 +434,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/9.jpg" alt="">
@@ -453,7 +453,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/10.jpg" alt="">
@@ -472,7 +472,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/11.jpg" alt="">
@@ -490,7 +490,7 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-6 col-lg-3 no-padding">
+					<div class=" col-md-6 col-lg-3 no-padding">
 						<div class="portfolio-content">
 							<figure>
 								<img class="img-fluid" src="assets/images/portfolio/12.jpg" alt="">
