--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -314,7 +314,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -333,7 +333,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -352,7 +352,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -371,7 +371,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -390,7 +390,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -409,7 +409,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -428,7 +428,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -447,7 +447,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -466,7 +466,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -484,7 +484,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -503,7 +503,7 @@
 									<li><a href="#">Portfolio</a></li>
 								</ul>
 								<ul class="flex flex-wrap justify-content-center">
-									<li><a class="btn btn-sm  btn-secondary p-0 pl-1 pr-1 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
+									<li><a class="btn btn-sm  btn-secondary p-0 pl-3 pr-3 view_btn" href="#"><i class="fas fa-eye"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -512,7 +512,37 @@
 
 			</div>
 		</section>
-		<!-- End Portfolio  
+		<!-- End Portfolio-->
+		<!-- Start Clients Says -->
+		<section id="client" class="client_area section-padding">
+			<div class="overlay"> </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-12 text-center">
+						<div class="section-head full-width">
+							<h4 class="title about_title title-left service_title">What's Clients Says?</h4>
+						</div>
+					</div>
+				</div>
+				<div class=" owl-carousel">
+					<div class="single_client item">
+						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<h5>- Jeffery Newman, Dragon</h5>
+					</div>
+
+					<div class="single_client item">
+						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<h5>- Jeffery Newman, Dragon</h5>
+					</div>
+
+					<div class="single_client item">
+						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<h5>- Jeffery Newman, Dragon</h5>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Clients Says -->
 		
 
       <!-- LinkUp Js -->
