--- a/index.html
+++ b/index.html
@@ -526,17 +526,17 @@
 				</div>
 				<div class=" owl-carousel">
 					<div class="single_client item">
-						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<p>" Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."</p>
 						<h5>- Jeffery Newman, Dragon</h5>
 					</div>
 
 					<div class="single_client item">
-						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<p>" Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."</p>
 						<h5>- Jeffery Newman, Dragon</h5>
 					</div>
 
 					<div class="single_client item">
-						<p>" we are Dragon, a design and branding partners worldwide been working in his.The standard chunk of Lorem Ipsum used since the is reproduced below for those interested."</p>
+						<p>" Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."</p>
 						<h5>- Jeffery Newman, Dragon</h5>
 					</div>
 				</div>
