--- a/index.html
+++ b/index.html
@@ -543,6 +543,95 @@
 			</div>
 		</section>
 		<!-- End Clients Says -->
+
+		<!-- Start Blog  -->
+		<section id="blog" class="blog_area section-padding">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-12 text-center">
+						<div class="section-head full-width">
+							<h4 class="title about_title title-left service_title">Our Blog</h4>
+						</div>
+					</div>
+				</div>
+				<div class="blogs mt-5">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="single_blog">
+								<div class="blog_img mb-3">
+									<img src="assets/images/2.jpg" alt="" />
+								</div>
+								<div class="blog_content">
+									<strong>BUSINESS</strong>
+									<div class="blog_content_top">
+										<h4>There are many variations</h4>
+										<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam.</p>
+									</div>
+									<div class="blog_content_bottom">
+										<p>By:<span> John Doe</span></p>
+										<p>8 November</p>
+										<p><a href="#">read more</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="single_blog">
+								<div class="blog_img mb-3">
+									<img src="assets/images/2.jpg" alt="" />
+								</div>
+								<div class="blog_content">
+									<strong>BUSINESS</strong>
+									<div class="blog_content_top">
+										<h4>There are many variations</h4>
+										<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam.</p>
+									</div>
+									<div class="blog_content_bottom">
+										<p>By:<span> John Doe</span></p>
+										<p>8 November</p>
+										<p><a href="#">read more</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="single_blog">
+								<div class="blog_img mb-3">
+									<img src="assets/images/2.jpg" alt="" />
+								</div>
+								<div class="blog_content">
+									<strong>BUSINESS</strong>
+									<div class="blog_content_top">
+										<h4>There are many variations</h4>
+										<p>fusce quis volutpat porta, ut tincidunt eros est nec diam erat quis volutpat porta, neque massa, ut tincidunt eros est nec diam.</p>
+									</div>
+									<div class="blog_content_bottom">
+										<p>By:<span> John Doe</span></p>
+										<p>8 November</p>
+										<p><a href="#">read more</a></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Blog  -->
+
+		<!--Bottom Footer-->
+		<div class="bottom section-padding">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<div class="copyright">
+							<p>&copy; <span>2018</span> <a href="#" class="transition">KnightRider7660</a> All rights reserved.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--Bottom Footer-->
 		
 
       <!-- LinkUp Js -->
