--- a/index.html
+++ b/index.html
@@ -619,6 +619,92 @@
 		</section>
 		<!-- End Blog  -->
 
+		<section id="contact" class="contact section-padding">
+			<div class="overlay"> </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-12 text-center">
+						<div class="section-head full-width">
+							<h4 class="title about_title title-left service_title">Wanna <span>Start Work</span> With Me?</h4>
+						</div>
+					</div>
+				</div>
+				<form class="form full-width" id="contact-form" method="post" action="#">
+					<div class="messages"></div>
+
+					<div class="controls">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group has-error has-danger">
+									<input id="form_name" type="text" name="name" placeholder="Name *" required="required">
+								</div>
+							</div>
+
+							<div class="col-md-6">
+								<div class="form-group">
+									<input id="form_email" type="email" name="email" placeholder="Email *" required="required">
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<input id="form_subject" type="text" name="subject" placeholder="Subject">
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<textarea id="form_message" name="message" placeholder="Your Message *" rows="4" required="required"></textarea>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+                                        <span class="buton buton-lg">
+	                                    	<button type="submit" >Send Message</button>
+										</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</form>
+				<div class="info full-width">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="item mb-sm50">
+								<span class="fas fa-mobile"></span>
+								<div class="cont">
+									<h6>Phone</h6>
+									<p>+88 01719 894 414</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="item mb-sm50">
+								<span class="fas fa-envelope"></span>
+								<div class="cont">
+									<h6>Email</h6>
+									<p>spurkayastha83@gmail.com</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="item">
+								<span class="fas fa-map-marker-alt"></span>
+								<div class="cont">
+									<h6>Address</h6>
+									<p>Tilagorh, Sylhet, Bangladesh</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<!--Bottom Footer-->
 		<div class="bottom section-padding">
 			<div class="container">
