--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>KNIGHT-RIDER</title>
+	<title>Sukanta Purkayastha</title>
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
@@ -24,8 +24,8 @@
 <nav class="navbar navbar-expand-xl nav_area sticky">
 	<div class="container">
 		<div class="logo">
-			<a href="" class="logo-light">KNIGHTRIDER</a>
-			<a href="" class="logo-dark">KNIGHTRIDER</a>
+			<a href="" class="logo-light">Sukanta Purkayastha</a>
+			<a href="" class="logo-dark">Sukanta Purkayastha</a>
 		</div>
 		<div class="collapse navbar-collapse " id="navbarNav">
 			<ul class="navbar-nav ml-auto navbar-center main_menu onepage_nav">
@@ -94,7 +94,7 @@
                      <a href="#" class="front">Hire Me &nbsp; <i class="fas fa-location-arrow"></i></a>
                      </span>
 					<span class="buton buton-bord text-center download">
-                     <a href="#" class="front">Download C.V &nbsp; <i class="fas fa-download"></i></a>
+                     <a href="assets/files/myCV.pdf" class="front" download="myCV.pdf">Download C.V &nbsp; <i class="fas fa-download"></i></a>
                      </span>
 				</div>
 			</div>
@@ -150,22 +150,53 @@
 				<div class="item skills">
 					<span class="fas fa-chart-line icon"></span><br>
 					<h5 class="title title-left">My Skills</h5>
-					<div class="skill">
-						<h6>Web Design <span>90%</span></h6>
-						<div class="skills-progress"><span data-value="90%" style="width: 90%;"></span></div>
-					</div>
-					<div class="skill">
-						<h6>Development <span>80%</span></h6>
-						<div class="skills-progress"><span data-value="80%" style="width: 80%;"></span></div>
-					</div>
-					<div class="skill">
-						<h6>Branding <span>85%</span></h6>
-						<div class="skills-progress"><span data-value="85%" style="width: 85%;"></span></div>
-					</div>
-					<div class="skill">
-						<h6>Marketing <span>75%</span></h6>
-						<div class="skills-progress"><span data-value="75%" style="width: 75%;"></span></div>
-					</div>
+                    <div class="skills_section">
+                        <div class="single_skill">
+                            <span class="skill_text">HTML</span>
+                            <div id="bar1" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="95"></span>
+                            </div>
+                        </div>
+                        <div class="single_skill">
+                            <span class="skill_text">CSS</span>
+                            <div id="bar2" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="70"></span>
+                            </div>
+                        </div>
+                        <div class="single_skill">
+                            <span class="skill_text">BOOTSTRAP</span>
+                            <div id="bar3" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="85"></span>
+                            </div>
+                        </div>
+                        <div class="single_skill">
+                            <span class="skill_text">JQUERY</span>
+                            <div id="bar4" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="35"></span>
+                            </div>
+                        </div>
+                        <div class="single_skill">
+                            <span class="skill_text">LARAVEL</span>
+                            <div id="bar5" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="80"></span>
+                            </div>
+                        </div>
+                    </div>
 				</div>
 			</div>
 		</div>
@@ -675,6 +706,7 @@
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/popper.min.js"></script>
 <script type="text/javascript" src="assets/js/onepagenav.js"></script>
+<script type="text/javascript" src="assets/js/jquery.barfiller.js"></script>
 <script type="text/javascript" src="assets/js/ityped.min.js"></script>
 <script type="text/javascript" src="assets/js/isotope.js"></script>
 <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
